chore: add npm start convenience script for development
- Add npm start script to root package.json for easier development
- Script delegates to .app directory for consistency
- Regenerate lock files for dependency tracking

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "AI Prompts by @ryanlewis - Static site",
   "scripts": {
+    "postinstall": "cd .app && npm install",
     "start": "cd .app && npm start",
     "build": "cd .app && npm run build",
     "serve": "cd .app && npm start",
